bug fix header spacing and helper text

--- a/ds_judgements_public_ui/sass/includes/_header.scss
+++ b/ds_judgements_public_ui/sass/includes/_header.scss
@@ -142,7 +142,7 @@
     font-size: $typography-sm-text-size;
     color: $color-white;
     text-align: right;
-    margin-top: $space-5;
+    margin-top: $space-16;
 
     a:focus {
       outline-color: $color-white;
